--- a/index.html
+++ b/index.html
@@ -391,12 +391,13 @@
                 </div>
             </div>
             <div class="footer-subscribe">
+                <p class="footer-subscribe-title">Subscribe</p>
                 <form class="subscribe-form" name="subscribe_form">
                     <label class="subscribe-form-label">
                         <input class="subscribe-form-input" type="email" name="subscribe_form-email"
-                            placeholder="Enter your email">
+                            placeholder="E-mail">
                     </label>
-                    <button class="footer-btn button accent-btn" type="submit">
+                    <button class="footer-subscribe-btn button" type="submit">
                         Subscribe
                         <svg class="footer-btn-icon" width="24" height="24">
                             <use href="./images/icons.svg#subscribe"></use>
@@ -458,7 +459,7 @@
                         <a class="modal-form-link" href="#">Privacy Policy</a>
                     </span>
                 </label>
-                <button class="button accent-btn" type="submit">Send</button>
+                <button class="button modal-btn-send accent-btn" type="submit">Send</button>
             </form>
         </div>
     </div>
