--- a/portfolio.html
+++ b/portfolio.html
@@ -226,46 +226,63 @@
     <!--Footer-->
     <footer class="page-footer">
         <div class="container container-footer">
-            <div class="footer-logo-paragpaph">
-                <a class="footer-link footer-logo link" href="./index.html">Web<span
-                        class="footer-logo-accent">Studio</span></a>
-                <p class="footer-text">
-                    Increase the flow of customers and sales for your business with digital
-                    marketing & growth solutions.
-                </p>
+            <div class="logo-social">
+                <div class="footer-logo-paragpaph">
+                    <a class="footer-link footer-logo link" href="./index.html">Web<span
+                            class="footer-logo-accent">Studio</span></a>
+                    <p class="footer-text">
+                        Increase the flow of customers and sales for your business with digital
+                        marketing & growth solutions.
+                    </p>
+                </div>
+                <div class="footer-social-media">
+                    <p class="footer-social-media-title">Social media</p>
+                    <ul class="list footer-social-icon-list">
+                        <li class="social-icon-item">
+                            <a class="footer-social-icon-link" href="">
+                                <svg class="social-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-icon-item">
+                            <a class="footer-social-icon-link" href="">
+                                <svg class="social-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-icon-item">
+                            <a class="footer-social-icon-link" href="">
+                                <svg class="social-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="social-icon-item">
+                            <a class="footer-social-icon-link" href="">
+                                <svg class="social-icon-footer" width="24" height="24">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="footer-social-media">
-                <p class="footer-social-media-title">Social media</p>
-                <ul class="list footer-social-icon-list">
-                    <li class="social-icon-item">
-                        <a class="footer-social-icon-link" href="">
-                            <svg class="social-icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item">
-                        <a class="footer-social-icon-link" href="">
-                            <svg class="social-icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item">
-                        <a class="footer-social-icon-link" href="">
-                            <svg class="social-icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="social-icon-item">
-                        <a class="footer-social-icon-link" href="">
-                            <svg class="social-icon-footer" width="24" height="24">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+            <div class="footer-subscribe">
+                <p class="footer-subscribe-title">Subscribe</p>
+                <form class="subscribe-form" name="subscribe_form">
+                    <label class="subscribe-form-label">
+                        <input class="subscribe-form-input" type="email" name="subscribe_form-email"
+                            placeholder="E-mail">
+                    </label>
+                    <button class="footer-subscribe-btn button" type="submit">
+                        Subscribe
+                        <svg class="footer-btn-icon" width="24" height="24">
+                            <use href="./images/icons.svg#subscribe"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
