--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <label class="modal-form-field">
                     <span class="modal-form-label">Comment</span>
                     <!-- <textarea class="modal-form-comment" type="text" name="user_comment" placeholder="Text input"> -->
-                    <textarea class="modal-form-comment" name="user_comment" id="" cols="30" rows="10"
+                    <textarea class="modal-form-comment" name="user_comment" cols="30" rows="10"
                         placeholder="Text input"></textarea>
                 </label>
                 <label class="modal-form-agreement">
