--- a/index.html
+++ b/index.html
@@ -347,48 +347,47 @@
     <!--Footer-->
     <footer class="page-footer">
         <div class="container container-footer">
-            <div class="logo-social">
-                <div class="footer-logo-paragpaph">
-                    <a class="footer-link footer-logo link" href="./index.html">Web<span
-                            class="footer-logo-accent">Studio</span></a>
-                    <p class="footer-text">
-                        Increase the flow of customers and sales for your business with digital
-                        marketing & growth solutions.
-                    </p>
-                </div>
-                <div class="footer-social-media">
-                    <p class="footer-social-media-title">Social media</p>
-                    <ul class="list footer-social-icon-list">
-                        <li class="social-icon-item">
-                            <a class="footer-social-icon-link" href="">
-                                <svg class="social-icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#instagram"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-icon-item">
-                            <a class="footer-social-icon-link" href="">
-                                <svg class="social-icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#twitter"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-icon-item">
-                            <a class="footer-social-icon-link" href="">
-                                <svg class="social-icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#linkedin"></use>
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="social-icon-item">
-                            <a class="footer-social-icon-link" href="">
-                                <svg class="social-icon-footer" width="24" height="24">
-                                    <use href="./images/icons.svg#facebook"></use>
-                                </svg>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
+
+            <div class="footer-logo-paragpaph">
+                <a class="footer-link footer-logo link" href="./index.html">Web<span
+                        class="footer-logo-accent">Studio</span></a>
+                <p class="footer-text">
+                    Increase the flow of customers and sales for your business with digital
+                    marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-social-media">
+                <p class="footer-social-media-title">Social media</p>
+                <ul class="list footer-social-icon-list">
+                    <li class="social-icon-item">
+                        <a class="footer-social-icon-link" href="">
+                            <svg class="social-icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item">
+                        <a class="footer-social-icon-link" href="">
+                            <svg class="social-icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item">
+                        <a class="footer-social-icon-link" href="">
+                            <svg class="social-icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-icon-item">
+                        <a class="footer-social-icon-link" href="">
+                            <svg class="social-icon-footer" width="24" height="24">
+                                <use href="./images/icons.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe</p>
@@ -420,33 +419,43 @@
                 Leave your contacts and we will call you back
             </strong>
             <form class="modal-form" name="reviev_form" autocomplete="off">
-                <label class="modal-form-field">
-                    <span class="modal-form-label">Name</span>
-                    <input class="modal-form-input" type="text" name="user_name" placeholder="Oleksiy Svystunov">
-                    <svg class="modal-form-icon" width="18" height="24">
-                        <use href="./images/icons.svg#person-modal"></use>
-                    </svg>
-                </label>
-                <label class="modal-form-field">
-                    <span class="modal-form-label">Phone</span>
-                    <input class="modal-form-input" type="text" name="user_phone" placeholder="+38-097-111-11-11">
-                    <svg class="modal-form-icon" width="18" height="24">
-                        <use href="./images/icons.svg#phone-modal"></use>
-                    </svg>
-                </label>
-                <label class="modal-form-field">
-                    <span class="modal-form-label">Email</span>
-                    <input class="modal-form-input" type="text" name="user_email" placeholder="mail@mail.com">
-                    <svg class="modal-form-icon" width="18" height="24">
-                        <use href="./images/icons.svg#email-modal"></use>
-                    </svg>
-                </label>
-                <label class="modal-form-field">
-                    <span class="modal-form-label">Comment</span>
-                    <!-- <textarea class="modal-form-comment" type="text" name="user_comment" placeholder="Text input"> -->
+
+                <div class="modal-form-label">
+                    <label class="modal-form-field">Name</label>
+                    <div class="modal-wrap-input-svg">
+                        <input class="modal-form-input" type="text" name="user_name" placeholder="Oleksiy Svystunov">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#person-modal"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-form-label">
+                    <label class="modal-form-field">Phone</label>
+                    <div class="modal-wrap-input-svg">
+                        <input class="modal-form-input" type="text" name="user_phone" placeholder="+38-097-111-11-11">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#phone-modal"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-form-label">
+                    <label class="modal-form-field">Email</label>
+                    <div class="modal-wrap-input-svg">
+                        <input class="modal-form-input" type="text" name="user_email" placeholder="mail@mail.com">
+                        <svg class="modal-form-icon" width="18" height="24">
+                            <use href="./images/icons.svg#email-modal"></use>
+                        </svg>
+                    </div>
+                </div>
+
+                <div class="modal-form-label">
+                    <label class="modal-form-field">Comment</label>
                     <textarea class="modal-form-comment" name="user_comment" cols="30" rows="10"
                         placeholder="Text input"></textarea>
-                </label>
+                </div>
+
                 <label class="modal-form-agreement">
                     <input class="modal-form-checkbox visually-hidden" type="checkbox">
                     <span class="modal-form-custom-checkbox">
