--- a/index.html
+++ b/index.html
@@ -415,15 +415,14 @@
                     <use href="./images/icons.svg#x-close"></use>
                 </svg>
             </button>
-            <strong class="modal-caption">
-                Leave your contacts and we will call you back
-            </strong>
+            <p class="modal-caption">Leave your contacts and we will call you back</p>
             <form class="modal-form" name="reviev_form" autocomplete="off">
 
                 <div class="modal-form-label">
-                    <label class="modal-form-field">Name</label>
+                    <label for="user-name" class="modal-form-field">Name</label>
                     <div class="modal-wrap-input-svg">
-                        <input class="modal-form-input" type="text" name="user_name" placeholder="Oleksiy Svystunov">
+                        <input class="modal-form-input" type="text" id="user-name" name="user-name"
+                            placeholder="Oleksiy Svystunov">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#person-modal"></use>
                         </svg>
@@ -431,9 +430,10 @@
                 </div>
 
                 <div class="modal-form-label">
-                    <label class="modal-form-field">Phone</label>
+                    <label for="user-phone" class="modal-form-field">Phone</label>
                     <div class="modal-wrap-input-svg">
-                        <input class="modal-form-input" type="text" name="user_phone" placeholder="+38-097-111-11-11">
+                        <input class="modal-form-input" type="text" id="user-phone" name="user-phone"
+                            placeholder="+38-097-111-11-11">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#phone-modal"></use>
                         </svg>
@@ -441,9 +441,10 @@
                 </div>
 
                 <div class="modal-form-label">
-                    <label class="modal-form-field">Email</label>
+                    <label for="user-email" class="modal-form-field">Email</label>
                     <div class="modal-wrap-input-svg">
-                        <input class="modal-form-input" type="text" name="user_email" placeholder="mail@mail.com">
+                        <input class="modal-form-input" type="text" id="user-email" name="user-email"
+                            placeholder="mail@mail.com">
                         <svg class="modal-form-icon" width="18" height="24">
                             <use href="./images/icons.svg#email-modal"></use>
                         </svg>
@@ -451,23 +452,29 @@
                 </div>
 
                 <div class="modal-form-label">
-                    <label class="modal-form-field">Comment</label>
-                    <textarea class="modal-form-comment" name="user_comment" cols="30" rows="10"
+                    <label for="user-comment" class="modal-form-field">Comment</label>
+                    <textarea class="modal-form-comment" id="user-comment" name="user-comment" cols="30" rows="10"
                         placeholder="Text input"></textarea>
                 </div>
 
-                <label class="modal-form-agreement">
-                    <input class="modal-form-checkbox visually-hidden" type="checkbox">
+                <div class="modal-form-agreement">
+                    <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
+                        name="user-privacy" value="true">
+
                     <span class="modal-form-custom-checkbox">
-                        <svg class="modal-form-checkbox-icon" width="10" height="10">
+                        <svg class="modal-form-checkbox-icon" width="10" height="8">
                             <use href="./images/icons.svg#click-check"></use>
                         </svg>
                     </span>
-                    <span class="modal-form-agreement-desc">
+                    <label class="modal-form-agreement-desc" for="user-privacy">I accept the terms and conditions of
+                        the
+                        <a class="modal-form-link" href="#">Privacy Policy</a>
+                    </label>
+                    <!-- <span class="modal-form-agreement-desc">
                         I accept the terms and conditions of the
                         <a class="modal-form-link" href="#">Privacy Policy</a>
-                    </span>
-                </label>
+                    </span> -->
+                </div>
                 <button class="button modal-btn-send accent-btn" type="submit">Send</button>
             </form>
         </div>
