--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
                     </div>
                 </div>
 
-                <div class="modal-form-label">
+                <div class="modal-form-label-comment">
                     <label for="user-comment" class="modal-form-field">Comment</label>
                     <textarea class="modal-form-comment" id="user-comment" name="user-comment" cols="30" rows="10"
                         placeholder="Text input"></textarea>
@@ -461,19 +461,20 @@
                     <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
                         name="user-privacy" value="true">
 
-                    <span class="modal-form-custom-checkbox">
-                        <svg class="modal-form-checkbox-icon" width="10" height="8">
-                            <use href="./images/icons.svg#click-check"></use>
-                        </svg>
-                    </span>
-                    <label class="modal-form-agreement-desc" for="user-privacy">I accept the terms and conditions of
+
+                    <label class="modal-form-agreement-desc" for="user-privacy">
+                        <span class="modal-form-custom-checkbox">
+                            <svg class="modal-form-checkbox-icon" width="10" height="8">
+                                <use href="./images/icons.svg#click-check"></use>
+                            </svg>
+                        </span>
+
+                        I accept the terms and conditions of
                         the
+
                         <a class="modal-form-link" href="#">Privacy Policy</a>
+
                     </label>
-                    <!-- <span class="modal-form-agreement-desc">
-                        I accept the terms and conditions of the
-                        <a class="modal-form-link" href="#">Privacy Policy</a>
-                    </span> -->
                 </div>
                 <button class="button modal-btn-send accent-btn" type="submit">Send</button>
             </form>
