--- a/index.html
+++ b/index.html
@@ -391,9 +391,9 @@
             </div>
             <div class="footer-subscribe">
                 <p class="footer-subscribe-title">Subscribe</p>
-                <form class="subscribe-form" name="subscribe_form">
+                <form class="subscribe-form" name="subscribe-form">
                     <label class="subscribe-form-label">
-                        <input class="subscribe-form-input" type="email" name="subscribe_form-email"
+                        <input class="subscribe-form-input" type="email" name="subscribe-form-email"
                             placeholder="E-mail">
                     </label>
                     <button class="footer-subscribe-btn button" type="submit">
@@ -460,19 +460,13 @@
                 <div class="modal-form-agreement">
                     <input class="modal-form-checkbox visually-hidden" type="checkbox" id="user-privacy"
                         name="user-privacy" value="true">
-
-
                     <label class="modal-form-agreement-desc" for="user-privacy">
                         <span class="modal-form-custom-checkbox">
                             <svg class="modal-form-checkbox-icon" width="10" height="8">
                                 <use href="./images/icons.svg#click-check"></use>
                             </svg>
-                        </span>
-
-                        I accept the terms and conditions of
-                        the
-
-                        <a class="modal-form-link" href="#">Privacy Policy</a>
+                        </span>I accept the terms and conditions of the <a class="modal-form-link" href="#">Privacy
+                            Policy</a>
 
                     </label>
                 </div>
