--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
                 </svg>
             </button>
             <p class="modal-caption">Leave your contacts and we will call you back</p>
-            <form class="modal-form" name="reviev_form" autocomplete="off">
+            <form class="modal-form" name="reviev-form" autocomplete="off">
 
                 <div class="modal-form-label">
                     <label for="user-name" class="modal-form-field">Name</label>
